<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="@string/question4"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/question4_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question4"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/question4_text"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question4_text"
        android:layout_marginLeft="80dp">

        <CheckBox
            android:id="@+id/answer4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/answer4_1" />

        <CheckBox
            android:id="@+id/answer4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer4_1"
            android:layout_marginBottom="10dp"
            android:text="@string/answer4_2" />

        <CheckBox
            android:id="@+id/answer4_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer4_2"
            android:layout_marginBottom="10dp"
            android:text="@string/answer4_3" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/next" />

</RelativeLayout>