<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="cursive"
        android:text="@string/question2"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/question2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question2"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/question2_text"
        android:textSize="24sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question2_text"
        android:layout_marginLeft="80dp">

        <RadioButton
            android:id="@+id/answer2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/answer2_1" />

        <RadioButton
            android:id="@+id/answer2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer2_1"
            android:layout_marginBottom="10dp"
            android:text="@string/answer2_2" />

        <RadioButton
            android:id="@+id/answer2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer2_2"
            android:layout_marginBottom="10dp"
            android:text="@string/answer2_3" />

    </RadioGroup>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/next" />

</RelativeLayout>