<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.olga.quizapp.MainActivity">

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="cursive"
        android:text="@string/question1"
        android:textSize="36sp"/>

    <TextView
        android:id="@+id/question1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/question1_text"
        android:textSize="24sp"/>

    <RadioButton
        android:id="@+id/answer1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question1_text"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="80dp"
        android:text="@string/answer1_1"/>

    <RadioButton
        android:id="@+id/answer1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer1_1"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="80dp"
        android:text="@string/answer1_2"/>

    <RadioButton
        android:id="@+id/answer1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer1_2"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="80dp"
        android:text="@string/answer1_3"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/next"/>

</RelativeLayout>
